<resources>
    <string name="app_name">Recipe Book</string>
    <string name="button_addRecipe">Add Recipe</string>
    <string name="hint_recipeTitle">Recipe Title</string>
    <string name="hint_recipeDescription">Description </string>
    <string name="menu_addRecipe">Add</string>
    <string name="menu_cancelRecipe">Cancel</string>
    <string name="enter_recipe_title"> Please enter a Recipe Title </string>
    <string name="save_recipe"> Save Recipe </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_recipe_image">Select Recipe Image</string>
    <string name="change_recipe_image">Change Recipe Image</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="country">Country</string>
    <string name="hint_recipeIngredients">Ingredients</string>
    <string name="menu_deleteRecipe">Delete</string>
    <string name="hint_recipeMethod">Method</string>

</resources>
